#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([URL Normalizer], [alpha 1.0], [jiayunye@gmail.com])
AM_INIT_AUTOMAKE(URL Normalizer, 1.0)

AC_CONFIG_SRCDIR([pseUrlNormalization.cpp])
AC_CONFIG_HEADER([config.h])
AC_PROG_RANLIB

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
